<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Myprofile">

    <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/michael"
            app:civ_border_width="4dp"
            app:civ_shadow="false"
            android:gravity="center"
            app:civ_shadow_radius="10"
            android:id="@+id/michael_dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.485"
            app:layout_constraintBottom_toTopOf="@+id/name" app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/name"
            android:layout_width="0dp"
            android:gravity="center"
            style="@style/MeduimText"
            android:layout_height="wrap_content"
            android:id="@+id/name" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/michael_dp"/>
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/myBlack"
            android:id="@+id/divider" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/name" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
    <TextView
            style="@style/smallText"
            android:text="@string/track_android"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/track" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/divider" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>
    <TextView
            style="@style/smallText"

            android:text="@string/country_nigeria"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/country" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/track"/>
    <TextView
            style="@style/smallText"

            android:text="@string/email_michael"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/email" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/country" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>
    <TextView
            style="@style/smallText"

            android:text="@string/phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/phone" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/email" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>
    <TextView
            style="@style/smallText"

            android:text="@string/slack_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/slack_username" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/phone" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>