<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


   <TextView
           android:text="@string/welcome_to_alc"
           android:layout_width="0dp"
           android:gravity="center"
           style="@style/BigText"
           android:layout_height="wrap_content"
           android:id="@+id/welcome_to_alc" app:layout_constraintTop_toTopOf="parent"
           android:layout_marginTop="32dp" app:layout_constraintStart_toStartOf="parent"
           android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"

           android:layout_marginEnd="16dp"/>
   <Button
           style="@style/buttonStyle"
           android:text="@string/about_alc"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/about_alc" android:layout_marginTop="80dp"
           app:layout_constraintTop_toBottomOf="@+id/welcome_to_alc" app:layout_constraintEnd_toEndOf="parent"
           android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
           android:layout_marginStart="16dp"/>
   <Button
           style="@style/buttonStyle"
           android:text="@string/my_profile"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/my_profile" android:layout_marginTop="32dp"
           app:layout_constraintTop_toBottomOf="@+id/about_alc" app:layout_constraintStart_toStartOf="parent"
           android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
           android:layout_marginEnd="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>